--- a/sergeykhan-frontend/apps/garant-master/package.json
+++ b/sergeykhan-frontend/apps/garant-master/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-table": "^8.21.2",
@@ -28,13 +29,17 @@
     "react": "^19.0.0",
     "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-time-picker": "^7.0.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
+    "@types/uuid": "^10.0.0",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
     "autoprefixer": "^10.4.20",
